privatebin/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: fz-privatebin
spec:
  selector:
    app: privatebin
  ports:
  - name: privatebin
    protocol: TCP
    port: 80
    targetPort: 80
