privatebin/05-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: privatebin
  namespace: fz-privatebin
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - bin.fromzero.fr
    secretName: bin-fromzero-fr-tls
  rules:
  - host: bin.fromzero.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: privatebin
          servicePort: privatebin
